[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
name = "iron_valid"
version = "0.1.0"
description = "Request validation library for iron, based on Laravel's validation"
license = "MIT"
documentation = "http://shssoichiro.github.io/iron-valid/iron_valid/"
homepage = "https://github.com/shssoichiro/iron-valid"
repository = "https://github.com/shssoichiro/iron-valid"
exclude = [
  "tests/*",
  "bench/*",
]

[dependencies]
dns-lookup = "^0.2.0"
lazy_static = "^0.2.1"
params = "^0.2.2"
regex = "^0.1.71"
rustc-serialize = "^0.3.19"
url = "^1.1.1"

[dev-dependencies]
multipart = "^0.7.0"
