[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
name = "iron_valid"
version = "0.2.0"
description = "Request validation library for iron, based on Laravel's validation"
license = "MIT"
documentation = "http://shssoichiro.github.io/iron-valid/iron_valid/"
homepage = "https://github.com/shssoichiro/iron-valid"
repository = "https://github.com/shssoichiro/iron-valid"
exclude = [
  "tests/*",
  "bench/*",
]

[dependencies]
diesel = { version = "^0.8.0", optional = true }
dns-lookup = "^0.2.0"
lazy_static = "^0.2.1"
params = "^0.5.0"
postgres = { version = "^0.11.10", optional = true }
regex = "^0.1.71"
rustc-serialize = "^0.3.19"
url = "^1.1.1"

[dependencies.clippy]
optional = true
version = ">=0.0.85"

[dev-dependencies]
mime = "^0.2.2"

[features]
default = []
dev = ["clippy", "postgres", "diesel"]
