[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
description = "Request validation library for iron, based on Laravel's validation"
documentation = "https://docs.rs/iron_valid/"
exclude = ["tests/*", "bench/*"]
homepage = "https://github.com/shssoichiro/iron-valid"
license = "MIT"
name = "iron_valid"
repository = "https://github.com/shssoichiro/iron-valid"
version = "0.5.0"

[dependencies]
dns-lookup = "^0.2.0"
lazy_static = "^0.2.1"
params = "^0.6.0"
regex = "^0.2.0"
serde_json = "^0.9.5"
url = "^1.1.1"

[dependencies.clippy]
optional = true
version = ">=0.0.85"

[dependencies.postgres]
optional = true
version = ">=0.11.10, <0.15.0"

[dev-dependencies]
mime = "^0.2.2"

[features]
default = []
dev = ["clippy", "pg"]
pg = ["postgres"]
